crates/biome_js_parser/tests/js_test_suite/ok/conditional_destructured_arrow_return_type_in_consequent.ts
const slotFn = isFirstMount
  ? ({ item }: Filter): Slot => item
  : other;
