crates/biome_js_parser/tests/js_test_suite/error/ts_object_getter_type_parameters.ts
({ get a<A>(): A {} });
({ get a<>(): A {} });
